build: Fix robolectric 'System::load' warnings (#23)