@@ -37,6 +37,7 @@ android {
                 showCauses = true
                 showStackTraces = true
             }
+            test.jvmArgs("--enable-native-access=ALL-UNNAMED")
         }
     }
 }
